# t510-fengine

./: .gitattributes  .gitignore  README.md  demo-ant.xpr  for_me.md
bd/: t510_fengine_bd.tcl  t510_rfdc_bd.tcl
docs/: time_udp_payload_v2.md
notebooks/: 00_board_check.ipynb  00_stage29_fengine_production_control.ipynb  01_clock_lmk_check.ipynb  02_rfdc_snapshot.ipynb  03_rfdc_spectrum.ipynb  04_pfb_tone_test.ipynb  05_udp_packet_test.ipynb  06_spec_stream_run.ipynb  07_time_stream_run.ipynb  08_lab_rfdc_fft_debug.ipynb  09_single_board_virtual_instrument.ipynb  10_8lane_realtime_virtual_instrument.ipynb  11_dac_adc_coherent_scope_spectrum.ipynb  12_rf_instrument_console_v2.ipynb  13_astronomer_rf_observation_console.ipynb  14_stage27g_time_spec_fengine_control.ipynb  15_stage27h_time_spec_fft_fullrate_control.ipynb  README.md
python/: __init__.py  packet.py  stage29.py  stage29_console.py  t510_clock.py  t510_fengine.py  t510_hw.py
rtl/: axi4_to_axil_bridge.sv  axis512_register_slice.sv  axis64_to_cmac512_async.sv  axis_packet_fifo.sv  axis_sideband_async_fifo.sv  axis_stream_duplicator.sv  cmac_tx_source_mux.sv  dac_tx_witness_capture.sv  feng_ctrl_axi.sv  fft_debug_observer.sv  monitor_counters.sv  multi_preview_observer.sv  pfb_channelizer.sv  pl_mts_sync_clk.v  requantizer.sv  rfdc_adc_axis_adapter.sv  rfdc_axis_raw_witness_capture.sv  science_decim2_halfband_aa.sv  science_rate_selector.sv  (+20 more)
rust/t510_board_agent/: Cargo.toml
rust/t510_board_agent/assets/: help.html  openapi.json
rust/t510_board_agent/src/: config.rs  lib.rs  main.rs  model.rs  system.rs
(+257 files in other folders)
